# Kaleidux

./: CONTRIBUTING.md  Cargo.toml  PROJECT_STANDARDS.md  README.md  USAGE.MD  analyze_intervals.py  analyze_intervals_new.py  analyze_log.py  config.example.toml  flake.nix  intervals_new.txt  sample.rhai  transitions_examples.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
kaleidux-common/: Cargo.toml
kaleidux-common/src/: lib.rs  protocol.rs  tests.rs  transition_defaults.rs  transition_impl.rs  transition_params.rs
kaleidux-daemon/: Cargo.toml  errors.txt
kaleidux-daemon/src/: background.rs  cache.rs  cuda_interop.rs  lib.rs  main.rs  main_loop.rs  metrics.rs  monitor.rs  monitor_manager.rs  orchestration.rs  queue.rs  renderer.rs  scripting.rs  shaders.rs  video.rs  wayland.rs  wayland_loop.rs  x11.rs  x11_loop.rs
kaleidux-daemon/src/cache/: watcher.rs
kaleidux-daemon/src/content/: mod.rs  sessions.rs  switch.rs  video_start.rs
kaleidux-daemon/src/content/switch/: tests.rs
kaleidux-daemon/src/image/: decode.rs  descriptor.rs  mod.rs  persistent_cache.rs  prefetch.rs  prepare.rs  runtime_cache.rs  runtime_cache_tests.rs  runtime_prefetch.rs  runtime_request.rs  runtime_shared.rs  runtime_switch.rs  types.rs
kaleidux-daemon/src/metrics/: baseline.rs  diagnostics.rs  summary.rs  system.rs  tests.rs  timing.rs
kaleidux-daemon/src/monitor_manager/: add_output.rs  config.rs  config_queue.rs  deadline.rs  manual_selection.rs  output.rs  schedule.rs  tests.rs
kaleidux-daemon/src/monitor_manager/tests/: update_config.rs
kaleidux-daemon/src/observability/: cpu_threads.rs  mod.rs  present.rs  trace_all.rs  video_backend.rs  wake.rs
kaleidux-daemon/src/orchestration/: tests.rs  transition_config.rs
kaleidux-daemon/src/queue/: discovery.rs  picking.rs  pool_events.rs  stats.rs  tests.rs
kaleidux-daemon/src/renderer/: context.rs  context_pipelines.rs  context_vulkan.rs  frame_callback.rs  image_upload.rs  lifecycle.rs  mpv_gl_interop.rs  pipeline_cache.rs  render_blit.rs  render_present.rs  render_transition.rs  resources.rs  state.rs  surface.rs  texture.rs  transitions.rs  video_cpu_upload.rs  video_interop.rs  video_layout.rs  video_rgba_upload.rs  video_upload.rs  video_zero_copy_upload.rs
kaleidux-daemon/src/runtime/: channel_drain.rs  commands.rs  housekeeping.rs  idle_runtime.rs  idle_wait.rs  ipc.rs  mod.rs  player_drain.rs  player_events.rs  startup_barrier.rs  startup_runtime.rs  timing.rs
kaleidux-daemon/src/shaders/: builtin_mapping.rs  builtin_sources.rs  i420_convert.wgsl  mipmap.wgsl  nv12_convert.wgsl  quad.wgsl  quad_vert.wgsl  safe_sources.rs  tests.rs  transitions.wgsl
kaleidux-daemon/src/shaders/builtin/: CrossZoom.glsl
kaleidux-daemon/src/shaders/transitions/: CrossZoom.glsl  Swirl.glsl  cube.glsl  pixelize.glsl
kaleidux-daemon/src/video/: appsink.rs  bus.rs  capabilities.rs  dmabuf.rs  frame.rs  lifecycle.rs  mpv_backend.rs  mpv_native.rs  pipeline_config.rs  test_support.rs  tests.rs
kaleidux-daemon/src/video/mpv_backend/: config.rs  software_render.rs
kaleidux-daemon/src/video/mpv_native/: egl_render.rs  offscreen_gl.rs
kaleidux-daemon/src/video/tests/: basic.rs
kaleidux-daemon/src/wayland/: frame_callbacks.rs  raw_handle.rs  startup.rs
kldctl/: Cargo.toml
kldctl/src/: main.rs
man/: kaleidux-daemon.1  kldctl.1
