[package]
name = "kaleidux-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kaleidux-common = { workspace = true }
wgpu = { workspace = true }
wgpu-hal = { workspace = true }
gstreamer = { workspace = true }
gstreamer-video = { workspace = true }
gstreamer-app = { workspace = true }
gstreamer-allocators = { workspace = true }
ash = { workspace = true }
naga = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
clap = { workspace = true }
toml = { workspace = true }
humantime-serde = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }
jwalk = { workspace = true }
redb = { workspace = true }
once_cell = { workspace = true }
postcard = { version = "1.1", default-features = false, features = ["use-std", "alloc"] }
chrono = { workspace = true }
rand = { workspace = true }
anyhow = "1.0"
raw-window-handle.workspace = true

# Specifically for Wayland and X11
smithay-client-toolkit = "0.20"
wayland-client = "0.31"
wayland-backend = { version = "0.3", features = ["client_system"] }
x11rb = { version = "0.13", features = ["allow-unsafe-code", "dl-libxcb", "randr"] }
image = { version = "0.25", features = ["avif-native"] }
rhai = { workspace = true }
bytemuck = { version = "1.25", features = ["derive"] }
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms", "background_threads_runtime_support"] }

libc = "0.2"
libloading = "0.9"
sysinfo = { version = "0.38", features = ["component"] }
parking_lot = "0.12"
futures = "0.3"
notify = { workspace = true }
nvml-wrapper = "0.12"
lru = "0.17"
fast_image_resize = { version = "6", features = ["image"] }
zune-core = "0.5.1"
zune-jpeg = "0.5.12"
zune-png = "0.5.2"
